---
sidebar: sidebar 
permalink: whats-new.html 
keywords: 'what"s new, features, new, release notes, enhancements, fixes' 
summary: ワークロードファクトリーのAIワークロード機能の最新情報をご確認ください。 
---
= 生成AI向けBlueXP  ワークロードファクトリの最新情報
:allow-uri-read: 
:icons: font
:imagesdir: ./media/


[role="lead"]
ワークロードファクトリのジェネレーティブAIワークロード機能の最新情報をご確認ください。



== 2025年2月2日



=== データソースのファイルタイプフィルタリング

生成AIでは、データソースを追加するときに、データソーススキャンに含める特定のファイルタイプの選択がサポートされるようになりました。

link:https://docs.netapp.com/us-en/workload-genai/create-knowledgebase.html#add-data-sources-to-the-knowledge-base["ナレッジベースへのデータソースの追加"]



=== データソースのファイル変更日のフィルタリング

生成AIでは、データソースの追加時に変更日によってデータソーススキャンに含めるファイルのフィルタリングがサポートされるようになりました。インクルードされるファイルの変更日の範囲を選択できます。

link:https://docs.netapp.com/us-en/workload-genai/create-knowledgebase.html#add-data-sources-to-the-knowledge-base["ナレッジベースへのデータソースの追加"]



=== 画像ファイルのサポートとPDFファイルのサポートの強化

生成AIでは、画像ファイルおよびPDFファイル内の画像のスキャンがサポートされるようになりました（マルチモーダルファイルサポートとも呼ばれます）。画像ファイルを選択すると、画像のテキストがデータソースにスキャンされ、データとして使用されます。この機能には、PDFドキュメント内の画像が含まれます。PDFファイルタイプを含めると、各PDF内の画像でテキストがスキャンされ、そのテキストがデータソースの情報に含まれます。

link:https://docs.netapp.com/us-en/workload-genai/create-knowledgebase.html#add-data-sources-to-the-knowledge-base["ナレッジベースへのデータソースの追加"]



=== ハイブリッド検索と再検索のサポート

生成AIでは、ハイブリッド検索を使用して検索結果の関連性を高め、結果の順位を変更できるようになりました。ハイブリッド検索は、キーワード検索とベクトル検索およびセマンティック検索を組み合わせたものです。標準的なキーワード検索結果は、近い一致と言語的なニュアンスで強化され、関連性が向上します。生成AIは検索結果を再ランク付けし、関連性が最も高い結果のみを返します。

link:https://docs.netapp.com/us-en/workload-genai/ai-workloads-overview.html#benefits-of-using-genai-to-create-generative-ai-applications["生成AI向けBlueXP  ワークロードファクトリの詳細"]



== 2025年1月5日



=== カスタムSnapshot名

アドホックスナップショットのスナップショット名を指定できるようになりました。

link:https://docs.netapp.com/us-en/workload-genai/manage-knowledgebase.html#protect-a-knowledge-base-with-snapshots["スナップショットでナレッジベースを保護"]



=== カスタムAIエンジンインスタンス名

導入時にAIエンジンインスタンスにカスタム名を付けることができるようになりました。

link:https://docs.netapp.com/us-en/workload-genai/deploy-infrastructure.html["GenAIインフラの導入"]


