@@ -342,14 +342,12 @@
   <block id="e9d7e3888c0ecac6d332909618bf2a62" category="list-text">埋め込みモデル</block>
   <block id="52e64b029bc109efaa2d9ddf8bf95697" category="list-text">ナレッジベースを作成する前に、使用する予定の埋め込みモデルを有効にする必要があります。次の埋め込みモデルがサポートされています。</block>
   <block id="cffe100a2fafd4ed6df5c517d3a0c436" category="list-text">チャットモデル</block>
-  <block id="f4b120821069537b900189401cff6123" category="list-text">ナレッジベースを作成する前に、使用する予定の基本チャットモデルを有効にする必要があります。次のClaudeチャットモデルがサポートされています。</block>
   <block id="91862a732427fcc9b0f3f7c7e8fd3ef1" category="list-text">クロード3.5ソネット</block>
   <block id="1ae4bf76ece2339f94382079fec8ea1b" category="list-text">クロード3オプス</block>
   <block id="5cb902fc92ae2100fc949c459b29f2e0" category="list-text">クロード3ハイク"</block>
   <block id="dfd281025f82519d079a3bf3bfbabad2" category="list-text">クロード3ソネット</block>
   <block id="48a6d42b28f10b9387da7c0c33136030" category="list-text">クロード2.1</block>
   <block id="5e1e83b3913f32ce101decea051b2e89" category="list-text">クロード2.0</block>
-  <block id="a9c39caddabc1e9e831e8874624eeb0b" category="paragraph">サポートされるモデルはAWSのリージョンによって異なるため、ナレッジベースを導入するリージョンで使用できるモデルを確認するには、を参照し<block ref="eddadb17a88dd68548e655a82b495d2f" category="inline-link-rx"></block> てください。</block>
   <block id="c16810aa96ec44a060863610996db3f6" category="list-text">少なくとも1つのFSx for ONTAPファイルシステムが必要です。</block>
   <block id="ae0e1b2daa525e1e1109bf5c13627d7d" category="list-text">NetApp GenAIエンジンは、ナレッジベースで使用されるベクターデータベースを格納するために1つのファイルシステムを使用します。</block>
   <block id="c076421513a5b28b674cdd0d818b4476" category="paragraph">このFSx for ONTAPファイルシステムでは、FlexVolボリュームを使用する必要があります。FlexGroupボリュームはサポートされません。</block>
@@ -819,4 +817,19 @@
   <block id="f7fb3b5dc06e03848b8f5ff23bbcd37d" category="paragraph">生成AIは、検索結果の関連性を向上させるために、デフォルトで検索結果を再ランク付けします。最良の結果を得るには、Amazon Bedrock Foundationモデルの構成に、Cohere RerankやAmazon Rerankなどのリランクモデルへのアクセスが含まれていることを確認してください（地域で利用可能な場合）。</block>
   <block id="986aee2caba870111e5ce3c5571c82de" category="section-title">2025年2月2日</block>
   <block id="26e6f4cc71039ce95ddbb0acdad6891d" category="section-title">2024年9月29日</block>
+  <block id="9a7d43c72f0d1a35c2a2cdfb58c6cc0d" category="doc">Amazon Nova基盤モデルのサポート</block>
+  <block id="ba0908c46e81d6dfcc41f1af42be123c" category="paragraph">生成AIはAmazon Nova基盤モデルをサポートするようになりました。Amazon Nova Micro、Amazon Nova Lite、およびAmazon Nova Proがサポートされています。</block>
+  <block id="5ddfb412189af7bcce0a056c9fcef326" category="paragraph"><block ref="5ddfb412189af7bcce0a056c9fcef326" category="inline-link-macro-rx"></block></block>
+  <block id="1b72fbdbed811fb02ab7310c71e79ab2" category="inline-link">AWSのドキュメント</block>
+  <block id="c3321626512a416bb22de0f62b8458bc" category="list-text">ナレッジベースを作成する前に、使用する予定の基本チャットモデルを有効にする必要があります。サポートされるモデルはAWSのリージョンによって異なるため、ナレッジベースを導入するリージョンで使用できるモデルを確認するには、を参照し<block ref="0bd10fd36efa0fd68b9fc8a53401f764" category="inline-link-rx"></block> てください。</block>
+  <block id="1c61d246c37b3dd7fcf1e2812799ee53" category="paragraph">生成AIは、次のAnthropic ClaudeモデルとAmazon Novaモデルをサポートしています。</block>
+  <block id="e37cca905470582668e8cf006efd3557" category="list-text">Anthropic Claude：</block>
+  <block id="22e20ffc2045bc3420e2cb94c47a29ce" category="list-text">Amazon Nova：</block>
+  <block id="39106736b72a09cf072c2dc73e847b86" category="list-text">Nova Micro</block>
+  <block id="5966dc23b01f7dbdf996a7a860ee9459" category="list-text">Nova Lite（画像とテキストをサポート）</block>
+  <block id="d5c9ae773ceec77e2ca3ed0d6347bf9b" category="list-text">Nova Pro（画像とテキストをサポート）</block>
+  <block id="ddbb727fa06553b8b9d4aab207332c7e" category="paragraph">Amazon Bedrockでこれらのモデルを使用する方法の詳細をご覧ください。</block>
+  <block id="0dd1c2bf85c6e3f8ac28b8d5d343a230" category="list-text"><block ref="0dd1c2bf85c6e3f8ac28b8d5d343a230" category="inline-link-rx"></block></block>
+  <block id="b6c678dfe5e31c8f081fa11ac56bff46" category="inline-link">Amazon BedrockコンソールでAmazon Novaを使い始める</block>
+  <block id="cafb3db15a71932288c768a7beb404b4" category="list-text"><block ref="cafb3db15a71932288c768a7beb404b4" category="inline-link-rx"></block></block>
 </blocks>
