@@ -19,6 +19,14 @@ summary: ワークロードファクトリーのAIワークロード機能の最
 
 
 
+=== Amazon Nova基盤モデルのサポート
+
+生成AIはAmazon Nova基盤モデルをサポートするようになりました。Amazon Nova Micro、Amazon Nova Lite、およびAmazon Nova Proがサポートされています。
+
+link:https://docs.netapp.com/us-en/workload-genai/requirements.html["GenAIの要件"]
+
+
+
 === データソースのファイルタイプフィルタリング
 
 生成AIでは、データソースを追加するときに、データソーススキャンに含める特定のファイルタイプの選択がサポートされるようになりました。
